--- a/fueltrack-configmap.yaml
+++ b/fueltrack-configmap.yaml
@@ -8,7 +8,13 @@ data:
   APP_ENV: production
   APP_KEY: base64:AvQEUYQ4fSeMu/gNvXoh+GsYdzicDtB8ubJQ32xU09Y=
   APP_DEBUG: "false"
-  APP_URL: http://192.168.49.2:31011
+  APP_URL: http://192.168.49.2:32712
+  DB_CONNECTION: mysql
+  DB_HOST: mysql-service
+  DB_PORT: "3306"
+  DB_DATABASE: fueltrack
+  DB_USERNAME: hassan
+  DB_PASSWORD: hassan
 
 
 
