--- a/fueltrack-pvc.yaml
+++ b/fueltrack-pvc.yaml
@@ -2,25 +2,69 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: fueltrack-pv
+  namespace: fueltrack # namespace specified here
+
 spec:
-  storageClassName: manual
   capacity:
     storage: 1Gi
   accessModes:
   - ReadWriteOnce
   hostPath:
-    path: /mnt/data
+    path: /data/fueltrack
+
+
 
 ---
-
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: fueltrack-pvc
+  name: fueltrack-claim
+  namespace: fueltrack # namespace specified here
+
 spec:
-  storageClassName: manual
   accessModes:
   - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: fueltrack-pv
+# spec:
+#   storageClassName: manual
+#   capacity:
+#     storage: 1Gi
+#   accessModes:
+#   - ReadWriteOnce
+#   hostPath:
+#     path: /mnt/data
+
+# ---
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: fueltrack-pvc
+# spec:
+#   storageClassName: manual
+#   accessModes:
+#   - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 1Gi
