--- a/fueltrack-configmap.yaml
+++ b/fueltrack-configmap.yaml
@@ -13,7 +13,7 @@ data:
   DB_HOST: mysql-service
   DB_PORT: "3306"
   DB_DATABASE: fueltrack
-  DB_USERNAME: hassan
+  DB_USERNAME: root
   DB_PASSWORD: hassan
 
 
