--- a/mysql-depl.yaml
+++ b/mysql-depl.yaml
@@ -33,13 +33,18 @@ spec:
 
 ---
 
+
+
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-depl
+  name: mysql
   namespace: fueltrack # namespace specified here
+  labels:
+    app: mysql
 spec:
-  replicas: 3
+  replicas: 2
   selector:
     matchLabels:
       app: mysql
@@ -48,36 +53,117 @@ spec:
       labels:
         app: mysql
     spec:
-      volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pvc
       containers:
       - name: mysql
-        image: mysql
+        image: mysql:5.7
         env:
-        - name: MYSQL_DATABASE
-          value: fueltrack
-        - name: MYSQL_USER
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: MYSQL_USER
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: mysql-secret
               key: MYSQL_ROOT_PASSWORD
-        - name: MYSQL_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secret
-              key: MYSQL_PASSWORD
+
+
+
+
+
+
+
+
+        # - name: MYSQL_ROOT_PASSWORD
+        #   value: mysql
         ports:
         - containerPort: 3306
         volumeMounts:
         - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pvc
+
+
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: mysql
+#   namespace: fueltrack # namespace specified here
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: mysql
+#   template:
+#     metadata:
+#       labels:
+#         app: mysql
+#     spec:
+#       containers:
+#       - name: mysql
+#         image: mysql:5.6
+#         env:
+#         - name: MYSQL_ROOT_PASSWORD
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_ROOT_PASSWORD
+#         ports:
+#         - containerPort: 3306
+#         volumeMounts:
+#         - name: mysql-persistent-storage
+#           mountPath: /var/lib/mysql
+#       volumes:
+#       - name: mysql-persistent-storage
+#         persistentVolumeClaim:
+#           claimName: mysql-pvc
+
+
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: mysql-depl
+#   namespace: fueltrack # namespace specified here
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: mysql
+#   template:
+#     metadata:
+#       labels:
+#         app: mysql
+#     spec:
+#       volumes:
+#       - name: mysql-persistent-storage
+#         persistentVolumeClaim:
+#           claimName: mysql-pvc
+#       containers:
+#       - name: mysql
+#         image: mysql
+#         env:
+#         - name: MYSQL_DATABASE
+#           value: fueltrack
+#         - name: MYSQL_USER
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_USER
+#         - name: MYSQL_ROOT_PASSWORD
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_ROOT_PASSWORD
+#         - name: MYSQL_PASSWORD
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_PASSWORD
+#         ports:
+#         - containerPort: 3306
+#         volumeMounts:
+#         - name: mysql-persistent-storage
+#           mountPath: /var/lib/mysql
 
 
 
