--- a/mysql-depl.yaml
+++ b/mysql-depl.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mysql-pv
+  namespace: fueltrack
 spec:
   capacity:
     storage: 1Gi
@@ -44,7 +45,7 @@ metadata:
   labels:
     app: mysql
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: mysql
