--- a/mysql-configmap.yaml
+++ b/mysql-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mysql-configmap
+  namespace: fueltrack
 data:
   MYSQL_USER: aGFzc2Fu
   MYSQL_ROOT_PASSWORD: aGFzc2Fu
