--- a/fueltrack-pvc.yaml
+++ b/fueltrack-pvc.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: fueltrack-pv
-  namespace: fueltrack # namespace specified here
+  # namespace: fueltrack # namespace specified here
 
 spec:
   capacity:
