--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: fueltrack-pv
-  namespace: fueltrack
 spec:
   capacity:
     storage: 2Gi
@@ -44,7 +43,7 @@ kind: Deployment
 metadata:
   name: fueltrack-deployment
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: fueltrack
@@ -85,6 +84,106 @@ spec:
       - name: fueltrack-volume
         persistentVolumeClaim:
           claimName: fueltrack-pvc
+
+
+
+
+
+
+
+
+
+
+
+
+
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: fueltrack-pv
+#   namespace: fueltrack
+# spec:
+#   capacity:
+#     storage: 2Gi
+#   accessModes:
+#   - ReadWriteOnce
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: standard
+#   hostPath:
+#     path: /data/fueltrack
+
+
+
+
+# ---
+
+
+
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: fueltrack-pvc
+#   namespace: fueltrack
+# spec:
+#   accessModes:
+#   - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 2Gi
+#   storageClassName: standard
+
+
+
+
+
+
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: fueltrack-deployment
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: fueltrack
+#   template:
+#     metadata:
+#       labels:
+#         app: fueltrack
+#     spec:
+#       containers:
+#       - name: fueltrack
+#         image: hasino2258/fueltrack:latest
+#         ports:
+#         - containerPort: 9001
+#         envFrom:
+#         - configMapRef:
+#             name: fueltrack-configmap
+#         env:
+#         - name: MYSQL_DATABASE
+#           value: fueltrack
+#         - name: MYSQL_HOST
+#           value: mysql-service
+#         - name: MYSQL_PORT
+#           value: "3306"
+#         - name: MYSQL_USER
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_USER
+#         - name: MYSQL_PASSWORD
+#           valueFrom:
+#             secretKeyRef:
+#               name: mysql-secret
+#               key: MYSQL_PASSWORD
+#         volumeMounts:
+#         - name: fueltrack-volume
+#           mountPath: data/fueltrack
+#       volumes:
+#       - name: fueltrack-volume
+#         persistentVolumeClaim:
+#           claimName: fueltrack-pvc
 
 
 
