--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: fueltrack-pv
+  name: fueltrack-qv
+  # namespace: fueltrack
 spec:
   capacity:
     storage: 2Gi
@@ -10,8 +11,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain
   storageClassName: standard
   hostPath:
-    path: /data/fueltrack
-
+    path: /fueltrack/storage/framework/sessions
 
 
 
@@ -77,113 +77,13 @@ spec:
             secretKeyRef:
               name: mysql-secret
               key: MYSQL_PASSWORD
-              #   volumeMounts:
-              #   - name: fueltrack-volume
-              #     mountPath: data/fueltrack
-              # volumes:
-              # - name: fueltrack-volume
-              #   persistentVolumeClaim:
-              #     claimName: fueltrack-pvc
-
-
-
-
-
-
-
-
-
-
-
-
-
-# apiVersion: v1
-# kind: PersistentVolume
-# metadata:
-#   name: fueltrack-pv
-#   namespace: fueltrack
-# spec:
-#   capacity:
-#     storage: 2Gi
-#   accessModes:
-#   - ReadWriteOnce
-#   persistentVolumeReclaimPolicy: Retain
-#   storageClassName: standard
-#   hostPath:
-#     path: /data/fueltrack
-
-
-
-
-# ---
-
-
-
-# apiVersion: v1
-# kind: PersistentVolumeClaim
-# metadata:
-#   name: fueltrack-pvc
-#   namespace: fueltrack
-# spec:
-#   accessModes:
-#   - ReadWriteOnce
-#   resources:
-#     requests:
-#       storage: 2Gi
-#   storageClassName: standard
-
-
-
-
-
-
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: fueltrack-deployment
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: fueltrack
-#   template:
-#     metadata:
-#       labels:
-#         app: fueltrack
-#     spec:
-#       containers:
-#       - name: fueltrack
-#         image: hasino2258/fueltrack:latest
-#         ports:
-#         - containerPort: 9001
-#         envFrom:
-#         - configMapRef:
-#             name: fueltrack-configmap
-#         env:
-#         - name: MYSQL_DATABASE
-#           value: fueltrack
-#         - name: MYSQL_HOST
-#           value: mysql-service
-#         - name: MYSQL_PORT
-#           value: "3306"
-#         - name: MYSQL_USER
-#           valueFrom:
-#             secretKeyRef:
-#               name: mysql-secret
-#               key: MYSQL_USER
-#         - name: MYSQL_PASSWORD
-#           valueFrom:
-#             secretKeyRef:
-#               name: mysql-secret
-#               key: MYSQL_PASSWORD
-#         volumeMounts:
-#         - name: fueltrack-volume
-#           mountPath: data/fueltrack
-#       volumes:
-#       - name: fueltrack-volume
-#         persistentVolumeClaim:
-#           claimName: fueltrack-pvc
+        volumeMounts:
+        - name: fueltrack-volume
+          mountPath: /fueltrack/storage/framework/sessions
+      volumes:
+      - name: fueltrack-volume
+        persistentVolumeClaim:
+          claimName: fueltrack-pvc
 
 
 
