--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -42,6 +42,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fueltrack-deployment
+  namespace: fueltrack
 spec:
   replicas: 1
   selector:
