Done by Jenkins Job changemanifest: 6

--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -151,7 +151,7 @@ spec:
 #     spec:
 #       containers:
 #       - name: fueltrack
-#         image: hasino2258/fueltrack:2.1
+#         image: hasino2258/fueltrack:latest
 #         ports:
 #         - containerPort: 9001
 #         envFrom:
@@ -205,7 +205,7 @@ spec:
 #       #     claimName: fueltrack-pvc
 #       containers:
 #       - name: fueltrack
-#         image: hasino2258/fueltrack:2.1
+#         image: hasino2258/fueltrack:latest
 #         ports:
 #         - containerPort: 9001
 #         envFrom:
@@ -254,7 +254,7 @@ spec:
 #     spec:
 #       containers:
 #       - name: fueltrack
-#         image: hasino2258/fueltrack:v2
+#         image: hasino2258/fueltrack:latest
 #         ports:
 #         - containerPort: 9001
 #         envFrom:
