--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -53,7 +53,7 @@ spec:
     spec:
       containers:
       - name: fueltrack
-        image: hasino2258/fueltrack:6
+        image: hasino2258/fueltrack:latest
         ports:
         - containerPort: 9001
         # args:
