--- a/fueltrack-configmap.yaml
+++ b/fueltrack-configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fueltrack-configmap
-  namespace: fueltrack # namespace specified here
+  # namespace: fueltrack # namespace specified here
 data:
   APP_NAME: Laravel
   APP_ENV: production
