--- a/fueltrack-depl.yaml
+++ b/fueltrack-depl.yaml
@@ -21,7 +21,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: fueltrack-pvc-3
-  namespace: fueltrack
+  # namespace: fueltrack
 spec:
   accessModes:
   - ReadWriteOnce
@@ -40,7 +40,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: fueltrack-deployment
-  namespace: fueltrack
+  # namespace: fueltrack
 spec:
   replicas: 2
   selector:
@@ -282,7 +282,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fueltrack-service
-  namespace: fueltrack
+  # namespace: fueltrack
 spec:
   selector:
     app: fueltrack
