--- a/mysql-secret.yaml
+++ b/mysql-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-  namespace: fueltrack # namespace specified here
+  # namespace: fueltrack # namespace specified here
 type: Opaque
 data:
   MYSQL_USER: aGFzc2Fu
