--- a/phpadmin.yaml
+++ b/phpadmin.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phpmyadmin-deployment
-  namespace: fueltrack # namespace specified here
+  # namespace: fueltrack # namespace specified here
 spec:
   replicas: 1
   selector:
@@ -24,9 +24,9 @@ spec:
         - name: PMA_PORT
           value: "3306"
 
-
-
         - name: MYSQL_USER
+
+
           valueFrom:
             secretKeyRef:
               name: mysql-secret
