--- a/mysql-depl.yaml
+++ b/mysql-depl.yaml
@@ -98,7 +98,7 @@ spec:
   - protocol: TCP
     port: 3306
     targetPort: 3306
-  clusterIP: None
+  clusterIP: ClusterIP
 # apiVersion: apps/v1
 
 ---
