--- a/mysql-depl.yaml
+++ b/mysql-depl.yaml
@@ -62,6 +62,8 @@ spec:
           persistentVolumeClaim:
             claimName: mysql-pvc
 ---
+
+
 apiVersion: v1
 kind: Service
 metadata:
@@ -73,7 +75,20 @@ spec:
     - protocol: TCP
       port: 3306
       targetPort: 3306
-  clusterIP: ClusterIP
+  type: ClusterIP
+
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: mysql-service
+# spec:
+#   selector:
+#     app: mysql
+#   ports:
+#     - protocol: TCP
+#       port: 3306
+#       targetPort: 3306
+#   clusterIP: ClusterIP
 
 
 
